# django-email-relay

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  README.md  RELEASING.md  manage.py  noxfile.py  pyproject.toml  requirements.in  requirements.txt  service.py
.bin/: bump.py
.copier/: package.yml
.dockerfiles/: Dockerfile
.github/: dependabot.yml
.github/workflows/: release.yml  revsys.yml  test.yml
.just/: docker.just
docker/: Dockerfile
docs/: conf.py  index.md  updating.md  why.md
docs/_static/css/: custom.css
docs/configuration/: index.md  relay-service.md
docs/contributing/: index.md  releasing.md
docs/installation/: django-app.md  index.md  relay-service.md
docs/usage/: index.md  relay-healthcheck.md
src/django_email_relay/: __init__.py
src/email_relay/: __init__.py  apps.py  backend.py  checks.py  conf.py  db.py  email.py  models.py  relay.py  service.py
src/email_relay/management/commands/: runrelay.py
src/email_relay/migrations/: 0001_initial.py  0002_auto_20231030_1304.py  0003_messageattachment.py  0004_migrate_attachments_to_files.py
src/service/: __main__.py  utils.py
tests/: conftest.py  settings.py  test_auto_setup.py  test_backend.py  test_conf.py  test_email.py  test_migrations.py  test_models.py  test_public_email_api.py  test_relay.py  test_router.py  test_runrelay.py  test_service.py  test_service_utils.py  test_version.py
